Fix the timeout for embeddings

--- a/tensorzero-core/tests/e2e/tensorzero.toml
+++ b/tensorzero-core/tests/e2e/tensorzero.toml
@@ -764,9 +764,7 @@ routing = ["slow", "openai"]
 [embedding_models.fallback.providers.slow]
 type = "dummy"
 model_name = "slow"
-
-[embedding_models.fallback.providers.slow.timeouts]
-non_streaming = { total_ms = 1000 }
+timeout_ms = 1000
 
 [embedding_models.fallback.providers.openai]
 type = "openai"
@@ -774,9 +772,7 @@ model_name = "text-embedding-3-small"
 
 [embedding_models.timeout]
 routing = ["slow"]
-
-[embedding_models.timeout.timeouts]
-non_streaming = { total_ms = 1000 }
+timeout_ms = 1000
 
 [embedding_models.timeout.providers.slow]
 type = "dummy"
