changed CI command to specifically run PG migrations

--- a/.github/workflows/merge-queue.yml
+++ b/.github/workflows/merge-queue.yml
@@ -208,10 +208,10 @@ jobs:
         run: |
           ./ci/run-provider-proxy.sh ci
 
-      - name: Run migrations
+      - name: Run PostgreSQL migrations
         # we build the migrations in sqlx offline mode since the database migrations haven't been run yet
         # then the migrations can run and we can use the database
-        run: SQLX_OFFLINE=true cargo run-e2e --run-clickhouse-migrations
+        run: SQLX_OFFLINE=true cargo run-e2e --run-postgres-migrations
 
       - name: Launch the gateway for E2E tests
         run: |
