--- a/tensorzero-core/Cargo.toml
+++ b/tensorzero-core/Cargo.toml
@@ -135,7 +135,9 @@ tonic = { version = "0.13.1", default-features = false }
 sqlx = { workspace = true }
 pin-project = "1.1.10"
 once_cell = "1.21.3"
-
+clarabel = { version = "0", default-features = false, features = ["serde"]}
+linalg = "0.1.0"
+typed-builder = "0.22.0"
 
 [dev-dependencies]
 tracing-test = { workspace = true }
