--- a/tensorzero-core/tests/e2e/tensorzero.toml
+++ b/tensorzero-core/tests/e2e/tensorzero.toml
@@ -733,6 +733,14 @@ model_name = "json_reasoner"
 [models.reasoner]
 routing = ["dummy"]
 
+[models.responses-gpt-5]
+routing = ["openai"]
+
+[models.responses-gpt-5.providers.openai]
+type = "openai"
+model_name = "gpt-5"
+api_type = "responses"
+
 [models.reasoner.providers.dummy]
 type = "dummy"
 model_name = "reasoner"
@@ -3625,6 +3633,14 @@ type = "chat"
 [functions.image_judger.variants.honest_answer]
 type = "chat_completion"
 model = "openai::gpt-4o-mini-2024-07-18"
+
+[functions.openai_responses_gpt5]
+type = "chat"
+
+[functions.openai_responses_gpt5.variants.openai]
+type = "chat_completion"
+model = "responses-gpt-5"
+
 
 [functions.openai_with_assistant_schema]
 type = "chat"
