--- a/tensorzero-core/tests/e2e/tensorzero.toml
+++ b/tensorzero-core/tests/e2e/tensorzero.toml
@@ -505,19 +505,19 @@ model_name = "deepseek-ai/DeepSeek-R1"
 
 ## OpenRouter
 
-[models.gpt_4_1_mini_openrouter]
+[models.gpt_4_o_mini_openrouter]
 routing = ["openrouter"]
 
-[models.gpt_4_1_mini_openrouter.providers.openrouter]
+[models.gpt_4_o_mini_openrouter.providers.openrouter]
 type = "openrouter"
-model_name = "openai/gpt-4.1-mini"
+model_name = "openai/gpt-4o-mini"
 
-[models.gpt_4_1_mini_openrouter_dynamic]
+[models.gpt_4_o_mini_openrouter_dynamic]
 routing = ["openrouter"]
 
-[models.gpt_4_1_mini_openrouter_dynamic.providers.openrouter]
+[models.gpt_4_o_mini_openrouter_dynamic.providers.openrouter]
 type = "openrouter"
-model_name = "openai/gpt-4.1-mini"
+model_name = "openai/gpt-4o-mini"
 api_key_location = "dynamic::openrouter_api_key"
 
 [functions.inference_ttft_chat]
@@ -1388,20 +1388,20 @@ extra_body = [{ pointer = "/reasoning_effort", value = "low" }]
 
 [functions.basic_test.variants.openrouter]
 type = "chat_completion"
-model = "gpt_4_1_mini_openrouter"
+model = "gpt_4_o_mini_openrouter"
 system_template = "../../fixtures/config/functions/basic_test/prompt/system_template.minijinja"
 max_tokens = 100
 
 [functions.basic_test.variants.openrouter-extra-body]
 type = "chat_completion"
-model = "gpt_4_1_mini_openrouter"
+model = "gpt_4_o_mini_openrouter"
 system_template = "../../fixtures/config/functions/basic_test/prompt/system_template.minijinja"
 max_tokens = 100
 extra_body = [{ pointer = "/temperature", value = 0.123 }]
 
 [functions.basic_test.variants.openrouter-extra-headers]
 type = "chat_completion"
-model = "gpt_4_1_mini_openrouter"
+model = "gpt_4_o_mini_openrouter"
 system_template = "../../fixtures/config/functions/basic_test/prompt/system_template.minijinja"
 max_tokens = 100
 extra_headers = [
@@ -1410,13 +1410,13 @@ extra_headers = [
 
 [functions.basic_test.variants.openrouter-dynamic]
 type = "chat_completion"
-model = "gpt_4_1_mini_openrouter_dynamic"
+model = "gpt_4_o_mini_openrouter_dynamic"
 system_template = "../../fixtures/config/functions/basic_test/prompt/system_template.minijinja"
 max_tokens = 100
 
 [functions.basic_test.variants.openrouter-shorthand]
 type = "chat_completion"
-model = "openrouter::openai/gpt-4.1"
+model = "openrouter::openai/gpt-4o-mini"
 system_template = "../../fixtures/config/functions/basic_test/prompt/system_template.minijinja"
 max_tokens = 100
 
@@ -2114,7 +2114,7 @@ json_mode = "strict"
 
 [functions.json_success.variants.openrouter]
 type = "chat_completion"
-model = "gpt_4_1_mini_openrouter"
+model = "gpt_4_o_mini_openrouter"
 system_template = "../../fixtures/config/functions/json_success/prompt/system_template.minijinja"
 user_template = "../../fixtures/config/functions/json_success/prompt/user_template.minijinja"
 json_mode = "implicit_tool"
@@ -2122,7 +2122,7 @@ max_tokens = 100
 
 [functions.json_success.variants.openrouter-implicit]
 type = "chat_completion"
-model = "gpt_4_1_mini_openrouter"
+model = "gpt_4_o_mini_openrouter"
 system_template = "../../fixtures/config/functions/json_success/prompt/system_template.minijinja"
 user_template = "../../fixtures/config/functions/json_success/prompt/user_template.minijinja"
 json_mode = "implicit_tool"
@@ -2130,7 +2130,7 @@ max_tokens = 100
 
 [functions.json_success.variants.openrouter-strict]
 type = "chat_completion"
-model = "gpt_4_1_mini_openrouter"
+model = "gpt_4_o_mini_openrouter"
 system_template = "../../fixtures/config/functions/json_success/prompt/system_template.minijinja"
 user_template = "../../fixtures/config/functions/json_success/prompt/user_template.minijinja"
 json_mode = "strict"
@@ -2782,7 +2782,7 @@ json_mode = "strict"
 
 [functions.dynamic_json.variants.openrouter]
 type = "chat_completion"
-model = "gpt_4_1_mini_openrouter"
+model = "gpt_4_o_mini_openrouter"
 system_template = "../../fixtures/config/functions/dynamic_json/prompt/system_template.minijinja"
 user_template = "../../fixtures/config/functions/dynamic_json/prompt/user_template.minijinja"
 json_mode = "on"
@@ -2790,7 +2790,7 @@ max_tokens = 100
 
 [functions.dynamic_json.variants.openrouter-strict]
 type = "chat_completion"
-model = "gpt_4_1_mini_openrouter"
+model = "gpt_4_o_mini_openrouter"
 system_template = "../../fixtures/config/functions/dynamic_json/prompt/system_template.minijinja"
 user_template = "../../fixtures/config/functions/dynamic_json/prompt/user_template.minijinja"
 max_tokens = 100
@@ -2798,7 +2798,7 @@ json_mode = "strict"
 
 [functions.dynamic_json.variants.openrouter-implicit]
 type = "chat_completion"
-model = "gpt_4_1_mini_openrouter"
+model = "gpt_4_o_mini_openrouter"
 system_template = "../../fixtures/config/functions/dynamic_json/prompt/system_template.minijinja"
 user_template = "../../fixtures/config/functions/dynamic_json/prompt/user_template.minijinja"
 json_mode = "implicit_tool"
@@ -3151,7 +3151,7 @@ max_tokens = 1000
 
 [functions.weather_helper.variants.openrouter]
 type = "chat_completion"
-model = "gpt_4_1_mini_openrouter"
+model = "gpt_4_o_mini_openrouter"
 system_template = "../../fixtures/config/functions/weather_helper/prompt/system_template.minijinja"
 max_tokens = 100
 
@@ -3203,7 +3203,7 @@ max_tokens = 1000
 [functions.weather_helper_parallel.variants.openrouter]
 type = "chat_completion"
 weight = 1
-model = "gpt_4_1_mini_openrouter"
+model = "gpt_4_o_mini_openrouter"
 system_template = "../../fixtures/config/functions/weather_helper_parallel/prompt/system_template.minijinja"
 
 [functions.weather_helper_parallel.variants.anthropic]
