Use workspace dependencies everywhere and enforce with 'cargo deny'
I also turned off the multiple-versions warnings from cargo-deny,
since there's nothing we can do about them

--- a/deny.toml
+++ b/deny.toml
@@ -9,6 +9,12 @@ deny = [
     { name = "openssl" },
     { name = "openssl-sys"}
 ]
+# We have lots of transitive dependencies with multiple versions,
+# so this check isn't useful for us.
+multiple-versions = "allow"
+workspace-dependencies.duplicates = "deny"
+workspace-dependencies.include-path-dependencies = false
+
 
 [advisories]
 ignore = [
