--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ http = "1.3.1"
 tokio-stream = "0.1.15"
 tokio = { version = "1.46.1", features = ["full"] }
 tracing = { version = "0.1.40", features = ["log"] }
+tokio-util = { version = "0.7.15" }
 pyo3 = { version = "0.26.0", features = ["experimental-async", "abi3-py39"] }
 axum = { version = "0.8", features = ["macros", "http2"] }
 anyhow = "1.0.99"
@@ -71,6 +72,18 @@ mime = { git = "https://github.com/hyperium/mime", rev = "1ef137c7358fc64e07c8a6
 ] }
 sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "chrono", "uuid"] }
 rlt = "0.2.1"
+base64 = "0.22.1"
+bytes = { version = "1.10.0" }
+eventsource-stream = "0.2.3"
+hex = "0.4.3"
+http-body-util = "0.1.3"
+mimalloc = "0.1.48"
+moka = { version = "0.12.10", features = ["sync"] }
+paste = "1.0.15"
+pin-project = "1.1.10"
+sha2 = "0.10.9"
+tempfile = "3.21.0"
+thiserror = "2.0.16"
 
 [workspace.lints.rust]
 unsafe_code = "forbid"
