--- a/clients/rust/Cargo.toml
+++ b/clients/rust/Cargo.toml
@@ -23,7 +23,7 @@ tokio-stream = { workspace = true }
 tensorzero-core = { path = "../../tensorzero-core" }
 ts-rs = { workspace = true }
 url = { workspace = true }
-thiserror = "2.0.16"
+thiserror = { workspace = true }
 pyo3 = { workspace = true, optional = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
@@ -32,9 +32,9 @@ git2 = { workspace = true }
 serde_path_to_error = { workspace = true }
 tensorzero-derive = { path = "../../internal/tensorzero-derive" }
 mime = { workspace = true }
-tokio-util = "0.7.15"
-tempfile = { version = "3.21.0", optional = true }
-paste = { version = "1.0.15", optional = true }
+tokio-util = { workspace = true }
+tempfile = { workspace = true, optional = true }
+paste = { workspace = true, optional = true }
 
 [lints]
 workspace = true
@@ -44,8 +44,7 @@ clap = { workspace = true }
 lazy_static = { workspace = true }
 object_store = { workspace = true }
 tokio = { workspace = true }
-tracing = "0.1.41"
-tracing-subscriber = "0.3.20"
+tracing-subscriber = { workspace = true }
 tracing-test = { workspace = true }
 
 [features]
