--- a/provider-proxy/Cargo.toml
+++ b/provider-proxy/Cargo.toml
@@ -11,27 +11,27 @@ path = "tests/e2e/tests.rs"
 
 [dependencies]
 anyhow = { workspace = true }
-bytes = { version = "1.10.0", features = ["serde"] }
-clap = { version = "4.5.46", features = ["derive"] }
-hex = "0.4.3"
-http = "1.2.0"
-http-body-util = "0.1.2"
+bytes = { workspace = true, features = ["serde"] }
+clap = { workspace = true }
+hex = { workspace = true }
+http = { workspace = true }
+http-body-util = { workspace = true }
 http-serde-ext = "1.0.2"
 hyper = { version = "1.7.0", features = ["client", "server", "http1", "http2"] }
 hyper-util = "0.1.15"
-moka = { version = "0.12.10", features = ["sync"] }
-pin-project = "1.1.10"
+moka = { workspace = true }
+pin-project = { workspace = true }
 rcgen = "0.14.2"
 reqwest.workspace = true
 rustls = "0.23.29"
 serde = { workspace = true }
 serde_json.workspace = true
-sha2 = "0.10.9"
+sha2 = { workspace = true }
 tokio.workspace = true
 tokio-rustls = "0.26.1"
-tracing = "0.1.41"
+tracing = { workspace = true }
 tracing-subscriber.workspace = true
-tempfile = "3.21.0"
+tempfile = { workspace = true }
 
 
 [lints]
@@ -39,4 +39,4 @@ workspace = true
 
 [dev-dependencies]
 axum.workspace = true
-rand = "0.9.1"
+rand = { workspace = true }
