--- a/tensorzero-core/Cargo.toml
+++ b/tensorzero-core/Cargo.toml
@@ -51,12 +51,12 @@ aws-types = "1.3.6"
 axum = { workspace = true }
 backon = { version = "1.5.1", features = ["tokio-sleep"] }
 blake3 = "1.8.2"
-bytes = "1.6.1"
+bytes = { workspace = true }
 chrono = { workspace = true }
 derive_builder = "0.20.0"
 futures = { workspace = true }
 futures-core = "0.3.30"
-hex = "0.4.3"
+hex = { workspace = true }
 itertools = "0.14.0"
 jsonschema = "0.33.0"
 jsonwebtoken = "9.3.1"
@@ -82,14 +82,14 @@ serde-untagged = { workspace = true }
 serde_json = { workspace = true }
 http = { workspace = true }
 serde_path_to_error = { workspace = true }
-sha2 = "0.10.9"
+sha2 = { workspace = true }
 strum = { version = "0.27.1", features = ["derive"] }
 strum_macros = "0.27.1"
 tokio = { workspace = true }
 tokio-stream = { workspace = true }
 toml = { workspace = true }
 tracing.workspace = true
-tracing-subscriber = { version = "0.3.20", features = [
+tracing-subscriber = { workspace = true, features = [
     "env-filter",
     "fmt",
     "json",
@@ -104,7 +104,7 @@ aws-sdk-sagemakerruntime = { version = "1.84.0", features = [
     "default-https-client",
 ], default-features = false }
 aws-smithy-runtime-api = "1.9.0"
-eventsource-stream = "0.2.3"
+eventsource-stream = { workspace = true }
 scoped-tls = "1.0.1"
 opentelemetry_sdk = "0.30.0"
 opentelemetry = "0.30.0"
@@ -123,29 +123,29 @@ google-cloud-auth = "0.23.0"
 mime = { workspace = true }
 mime_guess = "2.0.5"
 indexmap = "2.11.0"
-base64 = "0.22.1"
-thiserror = "2.0.16"
+base64 = { workspace = true }
+thiserror = { workspace = true }
 glob = "0.3.3"
 enum-map = "2.7.3"
-tokio-util = { version = "0.7.15", features = ["rt"] }
-tempfile = "3.21.0"
+tokio-util = { workspace = true, features = ["rt"] }
+tempfile = { workspace = true }
 ts-rs = { workspace = true }
-moka = { version = "0.12.10", features = ["sync"] }
+moka = { workspace = true }
 tonic = { version = "0.13.1", default-features = false }
 sqlx = { workspace = true }
-pin-project = "1.1.10"
+pin-project = { workspace = true }
 once_cell = "1.21.3"
 
 
 [dev-dependencies]
 tracing-test = { workspace = true }
 tensorzero = { path = "../clients/rust", features = ["e2e_tests"] }
-paste = "1.0.15"
-base64 = "0.22.1"
+paste = { workspace = true }
+base64 = { workspace = true }
 aws-credential-types = { version = "1.2.2", features = [
     "hardcoded-credentials",
 ] }
-http-body-util = "0.1.3"
+http-body-util = { workspace = true }
 urlencoding = "2.1.3"
 image = "0.25.6"
 gag = "1.0.0"
