--- a/tensorzero-core/tests/mock-inference-provider/Cargo.toml
+++ b/tensorzero-core/tests/mock-inference-provider/Cargo.toml
@@ -13,7 +13,7 @@ async-stream = { workspace = true }
 axum = { workspace = true, features = ["multipart", "http2"] }
 clap = { workspace = true }
 futures = { workspace = true }
-mimalloc = "0.1.48"
+mimalloc = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
 tower = { version = "0.5.2", features = ["util"] }
@@ -26,6 +26,6 @@ tower-http = { workspace = true }
 anyhow.workspace = true
 
 [dev-dependencies]
-eventsource-stream = "0.2.3"
+eventsource-stream = { workspace = true }
 reqwest = { workspace = true, features = ["stream"] }
 tokio-stream = { workspace = true }
