--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -70,6 +70,10 @@ clickhouse_migration = { max-threads = 1 }
 [[profile.default.overrides]]
 filter = 'test(test_otel_export)'
 slow-timeout = { period = "60s", terminate-after = 2 }
+# We sleep long enough that these tests should pass 100% of the time.
+# Any flakiness indicates a potential bug that could cause us to lose spans,
+# so we don't want to retry.
+retries = 0
 
 [[profile.default.overrides]]
 filter = 'binary(e2e) and test(providers::aws_bedrock::)'
