--- a/ui/fixtures/config/tensorzero.toml
+++ b/ui/fixtures/config/tensorzero.toml
@@ -94,6 +94,7 @@ type = "experimental_dynamic_in_context_learning"
 embedding_model = "text-embedding-3-small"
 model = "gpt-4o-mini-2024-07-18"
 k = 10
+cutoff = 0.5
 system_instructions = "functions/extract_entities/baseline/system_template.minijinja"
 json_mode = "strict"
 weight = 1
