--- a/.github/workflows/merge-queue.yml
+++ b/.github/workflows/merge-queue.yml
@@ -8,6 +8,7 @@ on:
       - "docs/**"
   schedule:
     - cron: "0 0 * * *" # Runs at 00:00 UTC every day
+  push:
 
 # When triggered from the merge queue, cancel any existing workflow runs for the same PR branch
 # Otherwise, use the unique run id for the concurrency group, to prevent anything from getting cancelled
@@ -225,10 +226,10 @@ jobs:
       # We set 'TENSORZERO_E2E_PROXY' here so that embedded gateway tests can use it
       # The 'CARGO_NEXTEST_FLAKY_TESTS' variable allows us to mark tests as flaky without merging a PR (if a provider happens to break or goes down)
       # We run the tests without the flaky tests, and require them to pass
-      - name: Run all tests (including E2E tests)
-        # When running from a cron job (the 'schedule' event), use '--no-fail-fast' so that we get full coverage of flaky providers.
-        run: |
-          TENSORZERO_E2E_PROXY="http://localhost:3003" cargo test-e2e ${{ vars.CARGO_NEXTEST_EXTRA_ARGS }} -E "not (${{ vars.CARGO_NEXTEST_FLAKY_TESTS }})" ${{ github.event_name == 'schedule' && '--no-fail-fast' || '' }}
+      # - name: Run all tests (including E2E tests)
+      #   # When running from a cron job (the 'schedule' event), use '--no-fail-fast' so that we get full coverage of flaky providers.
+      #   run: |
+      #     TENSORZERO_E2E_PROXY="http://localhost:3003" cargo test-e2e ${{ vars.CARGO_NEXTEST_EXTRA_ARGS }} -E "not (${{ vars.CARGO_NEXTEST_FLAKY_TESTS }})" ${{ github.event_name == 'schedule' && '--no-fail-fast' || '' }}
 
       # As a separate step, we run just the flaky tests, and allow them to fail.
       # This lets us see if any flaky tests have started succeeding (by looking at the job output),
@@ -244,7 +245,7 @@ jobs:
         working-directory: clients/python
         run: |
           # Start the test in background and capture its PID
-          bash ./test.sh --verbose &
+          bash ./test.sh -k extra_headers_raw --verbose &
           TEST_PID=$!
           echo "Started test.sh with PID: $TEST_PID"
 
