--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -318,6 +318,8 @@ jobs:
         run: cargo deny check
 
       - name: Test (Rust)
+        env:
+          TS_RS_EXPORT_DIR: ${{ github.workspace }}/internal/tensorzero-node/lib/bindings
         run: |
           cargo test-unit ${{ vars.CARGO_NEXTEST_EXTRA_ARGS }}
 
