--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -319,7 +319,8 @@ jobs:
 
       - name: Test (Rust)
         env:
-          TS_RS_EXPORT_DIR: ${{ github.workspace }}/internal/tensorzero-node/lib/bindings
+          # Write the exported bindings to somewhere we don't care about
+          TS_RS_EXPORT_DIR: /tmp/tensorzero-bindings
         run: |
           cargo test-unit ${{ vars.CARGO_NEXTEST_EXTRA_ARGS }}
 
