--- a/tensorzero-core/tests/e2e/docker-compose.live.yml
+++ b/tensorzero-core/tests/e2e/docker-compose.live.yml
@@ -222,8 +222,10 @@ services:
       # Shared tmpdir filesystem
       - shared-tmpdir:/tmp
     depends_on:
-      gateway:
-        condition: service_healthy
+      gateway-clickhouse-migrations:
+        condition: service_completed_successfully
+      gateway-postgres-migrations:
+        condition: service_completed_successfully
       fixtures:
         condition: service_completed_successfully
       clickhouse:
