--- a/tensorzero-core/Cargo.toml
+++ b/tensorzero-core/Cargo.toml
@@ -138,6 +138,7 @@ once_cell = "1.21.3"
 clarabel = { version = "0", default-features = false, features = ["serde"]}
 typed-builder = "0.22.0"
 arc-swap = "1.7.1"
+rand_distr = "0.5.1"
 
 [dev-dependencies]
 tracing-test = { workspace = true }
